--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.4",
     "dotenv": "^16.1.3",
     "firebase": "^9.22.1",
+    "node-env-file": "^0.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
